applications/webapp/matomo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo-deployment
  labels:
    app: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo
  template:
    metadata:
      labels:
        app: matomo
    spec:
      containers:
      - name: matomo
        image: matomo
        ports:
        - containerPort: 80
