applications/webapp/matomo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo-service
spec:
  selector:
    app: matomo
  ports:
    - name: matomo
      protocol: TCP
      port: 80
      targetPort: 80
