applications/webapp/matomo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo-ingress
  annotations:
    # kubernetes.io/tls-acme: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: kong
spec:
  # tls:
  # - secretName: webapp-tls-secret
  #   hosts:
  #   - webapp.herginnies.world
  rules:
  - host: matomo.herginnies.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: matomo-service
            port:
              number: 80
